parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASPAS
    SEPARADOR
    VARDEF

Grammar

Rule 0     S' -> programa
Rule 1     programa -> expressoes
Rule 2     expressoes -> <empty>
Rule 3     expressoes -> expressao
Rule 4     expressoes -> expressoes expressao
Rule 5     tipo -> INTEIRO
Rule 6     tipo -> REAL
Rule 7     tipo -> CARACTERE
Rule 8     expressao -> tipo VAR
Rule 9     expressao -> VAR ATRIBUI INTEIRODEF
Rule 10    expressao -> VAR ATRIBUI REALDEF
Rule 11    expressao -> VAR ATRIBUI CARACTEREDEF
Rule 12    expressao -> VAR ATRIBUI VAR
Rule 13    expressao -> VAR ATRIBUI VAR aritmeticos
Rule 14    aritmeticos -> <empty>
Rule 15    aritmeticos -> aritmetico
Rule 16    aritmeticos -> aritmeticos aritmetico
Rule 17    aritmetico -> SOMA VAR
Rule 18    aritmetico -> SUBTRACAO VAR
Rule 19    aritmetico -> MULTIPLICACAO VAR
Rule 20    aritmetico -> DIVISAO VAR
Rule 21    aritmetico -> RESTO VAR
Rule 22    relacao -> VAR IGUALDADE VAR
Rule 23    relacao -> VAR MAIOR VAR
Rule 24    relacao -> VAR MENOR VAR
Rule 25    relacao -> VAR MAIORIGUAL VAR
Rule 26    relacao -> VAR MENORIGUAL VAR
Rule 27    relacao -> VAR DIFERENTE VAR
Rule 28    teste -> relacao logicos
Rule 29    teste -> negacao logicos
Rule 30    logicos -> <empty>
Rule 31    logicos -> logico
Rule 32    logicos -> logicos logico
Rule 33    logico -> E relacao
Rule 34    logico -> E negacao
Rule 35    logico -> OU relacao
Rule 36    logico -> OU negacao
Rule 37    negacao -> NAO VAR
Rule 38    expressao -> ENTRADA ABREPARENTESES VAR FECHAPARENTESES
Rule 39    expressao -> SAIDA ABREPARENTESES VAR FECHAPARENTESES
Rule 40    expressao -> SE ABREPARENTESES teste FECHAPARENTESES COMECO expressoes FIM
Rule 41    expressao -> SE ABREPARENTESES teste FECHAPARENTESES COMECO expressoes FIM SENAO COMECO expressoes FIM
Rule 42    expressao -> ENQUANTO ABREPARENTESES teste FECHAPARENTESES COMECO expressoes FIM
Rule 43    maismenos -> SOMA
Rule 44    maismenos -> SUBTRACAO
Rule 45    comparacao -> MAIOR
Rule 46    comparacao -> MENOR
Rule 47    comparacao -> MAIORIGUAL
Rule 48    comparacao -> MENORIGUAL
Rule 49    expressao -> DURANTE ABREPARENTESES INTEIRODEF PONTOEVIRGULA maismenos PONTOEVIRGULA INTEIRODEF PONTOEVIRGULA comparacao PONTOEVIRGULA INTEIRODEF FECHAPARENTESES COMECO expressoes FIM

Terminals, with rules where they appear

ABREPARENTESES       : 38 39 40 41 42 49
ASPAS                : 
ATRIBUI              : 9 10 11 12 13
CARACTERE            : 7
CARACTEREDEF         : 11
COMECO               : 40 41 41 42 49
DIFERENTE            : 27
DIVISAO              : 20
DURANTE              : 49
E                    : 33 34
ENQUANTO             : 42
ENTRADA              : 38
FECHAPARENTESES      : 38 39 40 41 42 49
FIM                  : 40 41 41 42 49
IGUALDADE            : 22
INTEIRO              : 5
INTEIRODEF           : 9 49 49 49
MAIOR                : 23 45
MAIORIGUAL           : 25 47
MENOR                : 24 46
MENORIGUAL           : 26 48
MULTIPLICACAO        : 19
NAO                  : 37
OU                   : 35 36
PONTOEVIRGULA        : 49 49 49 49
REAL                 : 6
REALDEF              : 10
RESTO                : 21
SAIDA                : 39
SE                   : 40 41
SENAO                : 41
SEPARADOR            : 
SOMA                 : 17 43
SUBTRACAO            : 18 44
VAR                  : 8 9 10 11 12 12 13 13 17 18 19 20 21 22 22 23 23 24 24 25 25 26 26 27 27 37 38 39
VARDEF               : 
error                : 

Nonterminals, with rules where they appear

aritmetico           : 15 16
aritmeticos          : 13 16
comparacao           : 49
expressao            : 3 4
expressoes           : 1 4 40 41 41 42 49
logico               : 31 32
logicos              : 28 29 32
maismenos            : 49
negacao              : 29 34 36
programa             : 0
relacao              : 28 33 35
teste                : 40 41 42
tipo                 : 8

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . expressoes
    (2) expressoes -> .
    (3) expressoes -> . expressao
    (4) expressoes -> . expressoes expressao
    (8) expressao -> . tipo VAR
    (9) expressao -> . VAR ATRIBUI INTEIRODEF
    (10) expressao -> . VAR ATRIBUI REALDEF
    (11) expressao -> . VAR ATRIBUI CARACTEREDEF
    (12) expressao -> . VAR ATRIBUI VAR
    (13) expressao -> . VAR ATRIBUI VAR aritmeticos
    (38) expressao -> . ENTRADA ABREPARENTESES VAR FECHAPARENTESES
    (39) expressao -> . SAIDA ABREPARENTESES VAR FECHAPARENTESES
    (40) expressao -> . SE ABREPARENTESES teste FECHAPARENTESES COMECO expressoes FIM
    (41) expressao -> . SE ABREPARENTESES teste FECHAPARENTESES COMECO expressoes FIM SENAO COMECO expressoes FIM
    (42) expressao -> . ENQUANTO ABREPARENTESES teste FECHAPARENTESES COMECO expressoes FIM
    (49) expressao -> . DURANTE ABREPARENTESES INTEIRODEF PONTOEVIRGULA maismenos PONTOEVIRGULA INTEIRODEF PONTOEVIRGULA comparacao PONTOEVIRGULA INTEIRODEF FECHAPARENTESES COMECO expressoes FIM
    (5) tipo -> . INTEIRO
    (6) tipo -> . REAL
    (7) tipo -> . CARACTERE

  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for ENTRADA resolved as shift
  ! shift/reduce conflict for SAIDA resolved as shift
  ! shift/reduce conflict for SE resolved as shift
  ! shift/reduce conflict for ENQUANTO resolved as shift
  ! shift/reduce conflict for DURANTE resolved as shift
  ! shift/reduce conflict for INTEIRO resolved as shift
  ! shift/reduce conflict for REAL resolved as shift
  ! shift/reduce conflict for CARACTERE resolved as shift
    $end            reduce using rule 2 (expressoes -> .)
    VAR             shift and go to state 5
    ENTRADA         shift and go to state 6
    SAIDA           shift and go to state 7
    SE              shift and go to state 8
    ENQUANTO        shift and go to state 9
    DURANTE         shift and go to state 10
    INTEIRO         shift and go to state 11
    REAL            shift and go to state 12
    CARACTERE       shift and go to state 13

  ! VAR             [ reduce using rule 2 (expressoes -> .) ]
  ! ENTRADA         [ reduce using rule 2 (expressoes -> .) ]
  ! SAIDA           [ reduce using rule 2 (expressoes -> .) ]
  ! SE              [ reduce using rule 2 (expressoes -> .) ]
  ! ENQUANTO        [ reduce using rule 2 (expressoes -> .) ]
  ! DURANTE         [ reduce using rule 2 (expressoes -> .) ]
  ! INTEIRO         [ reduce using rule 2 (expressoes -> .) ]
  ! REAL            [ reduce using rule 2 (expressoes -> .) ]
  ! CARACTERE       [ reduce using rule 2 (expressoes -> .) ]

    programa                       shift and go to state 1
    expressoes                     shift and go to state 2
    expressao                      shift and go to state 3
    tipo                           shift and go to state 4

state 1

    (0) S' -> programa .



state 2

    (1) programa -> expressoes .
    (4) expressoes -> expressoes . expressao
    (8) expressao -> . tipo VAR
    (9) expressao -> . VAR ATRIBUI INTEIRODEF
    (10) expressao -> . VAR ATRIBUI REALDEF
    (11) expressao -> . VAR ATRIBUI CARACTEREDEF
    (12) expressao -> . VAR ATRIBUI VAR
    (13) expressao -> . VAR ATRIBUI VAR aritmeticos
    (38) expressao -> . ENTRADA ABREPARENTESES VAR FECHAPARENTESES
    (39) expressao -> . SAIDA ABREPARENTESES VAR FECHAPARENTESES
    (40) expressao -> . SE ABREPARENTESES teste FECHAPARENTESES COMECO expressoes FIM
    (41) expressao -> . SE ABREPARENTESES teste FECHAPARENTESES COMECO expressoes FIM SENAO COMECO expressoes FIM
    (42) expressao -> . ENQUANTO ABREPARENTESES teste FECHAPARENTESES COMECO expressoes FIM
    (49) expressao -> . DURANTE ABREPARENTESES INTEIRODEF PONTOEVIRGULA maismenos PONTOEVIRGULA INTEIRODEF PONTOEVIRGULA comparacao PONTOEVIRGULA INTEIRODEF FECHAPARENTESES COMECO expressoes FIM
    (5) tipo -> . INTEIRO
    (6) tipo -> . REAL
    (7) tipo -> . CARACTERE

    $end            reduce using rule 1 (programa -> expressoes .)
    VAR             shift and go to state 5
    ENTRADA         shift and go to state 6
    SAIDA           shift and go to state 7
    SE              shift and go to state 8
    ENQUANTO        shift and go to state 9
    DURANTE         shift and go to state 10
    INTEIRO         shift and go to state 11
    REAL            shift and go to state 12
    CARACTERE       shift and go to state 13

    expressao                      shift and go to state 14
    tipo                           shift and go to state 4

state 3

    (3) expressoes -> expressao .

    VAR             reduce using rule 3 (expressoes -> expressao .)
    ENTRADA         reduce using rule 3 (expressoes -> expressao .)
    SAIDA           reduce using rule 3 (expressoes -> expressao .)
    SE              reduce using rule 3 (expressoes -> expressao .)
    ENQUANTO        reduce using rule 3 (expressoes -> expressao .)
    DURANTE         reduce using rule 3 (expressoes -> expressao .)
    INTEIRO         reduce using rule 3 (expressoes -> expressao .)
    REAL            reduce using rule 3 (expressoes -> expressao .)
    CARACTERE       reduce using rule 3 (expressoes -> expressao .)
    $end            reduce using rule 3 (expressoes -> expressao .)
    FIM             reduce using rule 3 (expressoes -> expressao .)


state 4

    (8) expressao -> tipo . VAR

    VAR             shift and go to state 15


state 5

    (9) expressao -> VAR . ATRIBUI INTEIRODEF
    (10) expressao -> VAR . ATRIBUI REALDEF
    (11) expressao -> VAR . ATRIBUI CARACTEREDEF
    (12) expressao -> VAR . ATRIBUI VAR
    (13) expressao -> VAR . ATRIBUI VAR aritmeticos

    ATRIBUI         shift and go to state 16


state 6

    (38) expressao -> ENTRADA . ABREPARENTESES VAR FECHAPARENTESES

    ABREPARENTESES  shift and go to state 17


state 7

    (39) expressao -> SAIDA . ABREPARENTESES VAR FECHAPARENTESES

    ABREPARENTESES  shift and go to state 18


state 8

    (40) expressao -> SE . ABREPARENTESES teste FECHAPARENTESES COMECO expressoes FIM
    (41) expressao -> SE . ABREPARENTESES teste FECHAPARENTESES COMECO expressoes FIM SENAO COMECO expressoes FIM

    ABREPARENTESES  shift and go to state 19


state 9

    (42) expressao -> ENQUANTO . ABREPARENTESES teste FECHAPARENTESES COMECO expressoes FIM

    ABREPARENTESES  shift and go to state 20


state 10

    (49) expressao -> DURANTE . ABREPARENTESES INTEIRODEF PONTOEVIRGULA maismenos PONTOEVIRGULA INTEIRODEF PONTOEVIRGULA comparacao PONTOEVIRGULA INTEIRODEF FECHAPARENTESES COMECO expressoes FIM

    ABREPARENTESES  shift and go to state 21


state 11

    (5) tipo -> INTEIRO .

    VAR             reduce using rule 5 (tipo -> INTEIRO .)


state 12

    (6) tipo -> REAL .

    VAR             reduce using rule 6 (tipo -> REAL .)


state 13

    (7) tipo -> CARACTERE .

    VAR             reduce using rule 7 (tipo -> CARACTERE .)


state 14

    (4) expressoes -> expressoes expressao .

    VAR             reduce using rule 4 (expressoes -> expressoes expressao .)
    ENTRADA         reduce using rule 4 (expressoes -> expressoes expressao .)
    SAIDA           reduce using rule 4 (expressoes -> expressoes expressao .)
    SE              reduce using rule 4 (expressoes -> expressoes expressao .)
    ENQUANTO        reduce using rule 4 (expressoes -> expressoes expressao .)
    DURANTE         reduce using rule 4 (expressoes -> expressoes expressao .)
    INTEIRO         reduce using rule 4 (expressoes -> expressoes expressao .)
    REAL            reduce using rule 4 (expressoes -> expressoes expressao .)
    CARACTERE       reduce using rule 4 (expressoes -> expressoes expressao .)
    $end            reduce using rule 4 (expressoes -> expressoes expressao .)
    FIM             reduce using rule 4 (expressoes -> expressoes expressao .)


state 15

    (8) expressao -> tipo VAR .

    VAR             reduce using rule 8 (expressao -> tipo VAR .)
    ENTRADA         reduce using rule 8 (expressao -> tipo VAR .)
    SAIDA           reduce using rule 8 (expressao -> tipo VAR .)
    SE              reduce using rule 8 (expressao -> tipo VAR .)
    ENQUANTO        reduce using rule 8 (expressao -> tipo VAR .)
    DURANTE         reduce using rule 8 (expressao -> tipo VAR .)
    INTEIRO         reduce using rule 8 (expressao -> tipo VAR .)
    REAL            reduce using rule 8 (expressao -> tipo VAR .)
    CARACTERE       reduce using rule 8 (expressao -> tipo VAR .)
    $end            reduce using rule 8 (expressao -> tipo VAR .)
    FIM             reduce using rule 8 (expressao -> tipo VAR .)


state 16

    (9) expressao -> VAR ATRIBUI . INTEIRODEF
    (10) expressao -> VAR ATRIBUI . REALDEF
    (11) expressao -> VAR ATRIBUI . CARACTEREDEF
    (12) expressao -> VAR ATRIBUI . VAR
    (13) expressao -> VAR ATRIBUI . VAR aritmeticos

    INTEIRODEF      shift and go to state 23
    REALDEF         shift and go to state 24
    CARACTEREDEF    shift and go to state 25
    VAR             shift and go to state 22


state 17

    (38) expressao -> ENTRADA ABREPARENTESES . VAR FECHAPARENTESES

    VAR             shift and go to state 26


state 18

    (39) expressao -> SAIDA ABREPARENTESES . VAR FECHAPARENTESES

    VAR             shift and go to state 27


state 19

    (40) expressao -> SE ABREPARENTESES . teste FECHAPARENTESES COMECO expressoes FIM
    (41) expressao -> SE ABREPARENTESES . teste FECHAPARENTESES COMECO expressoes FIM SENAO COMECO expressoes FIM
    (28) teste -> . relacao logicos
    (29) teste -> . negacao logicos
    (22) relacao -> . VAR IGUALDADE VAR
    (23) relacao -> . VAR MAIOR VAR
    (24) relacao -> . VAR MENOR VAR
    (25) relacao -> . VAR MAIORIGUAL VAR
    (26) relacao -> . VAR MENORIGUAL VAR
    (27) relacao -> . VAR DIFERENTE VAR
    (37) negacao -> . NAO VAR

    VAR             shift and go to state 31
    NAO             shift and go to state 32

    teste                          shift and go to state 28
    relacao                        shift and go to state 29
    negacao                        shift and go to state 30

state 20

    (42) expressao -> ENQUANTO ABREPARENTESES . teste FECHAPARENTESES COMECO expressoes FIM
    (28) teste -> . relacao logicos
    (29) teste -> . negacao logicos
    (22) relacao -> . VAR IGUALDADE VAR
    (23) relacao -> . VAR MAIOR VAR
    (24) relacao -> . VAR MENOR VAR
    (25) relacao -> . VAR MAIORIGUAL VAR
    (26) relacao -> . VAR MENORIGUAL VAR
    (27) relacao -> . VAR DIFERENTE VAR
    (37) negacao -> . NAO VAR

    VAR             shift and go to state 31
    NAO             shift and go to state 32

    teste                          shift and go to state 33
    relacao                        shift and go to state 29
    negacao                        shift and go to state 30

state 21

    (49) expressao -> DURANTE ABREPARENTESES . INTEIRODEF PONTOEVIRGULA maismenos PONTOEVIRGULA INTEIRODEF PONTOEVIRGULA comparacao PONTOEVIRGULA INTEIRODEF FECHAPARENTESES COMECO expressoes FIM

    INTEIRODEF      shift and go to state 34


state 22

    (12) expressao -> VAR ATRIBUI VAR .
    (13) expressao -> VAR ATRIBUI VAR . aritmeticos
    (14) aritmeticos -> .
    (15) aritmeticos -> . aritmetico
    (16) aritmeticos -> . aritmeticos aritmetico
    (17) aritmetico -> . SOMA VAR
    (18) aritmetico -> . SUBTRACAO VAR
    (19) aritmetico -> . MULTIPLICACAO VAR
    (20) aritmetico -> . DIVISAO VAR
    (21) aritmetico -> . RESTO VAR

  ! reduce/reduce conflict for VAR resolved using rule 12 (expressao -> VAR ATRIBUI VAR .)
  ! reduce/reduce conflict for ENTRADA resolved using rule 12 (expressao -> VAR ATRIBUI VAR .)
  ! reduce/reduce conflict for SAIDA resolved using rule 12 (expressao -> VAR ATRIBUI VAR .)
  ! reduce/reduce conflict for SE resolved using rule 12 (expressao -> VAR ATRIBUI VAR .)
  ! reduce/reduce conflict for ENQUANTO resolved using rule 12 (expressao -> VAR ATRIBUI VAR .)
  ! reduce/reduce conflict for DURANTE resolved using rule 12 (expressao -> VAR ATRIBUI VAR .)
  ! reduce/reduce conflict for INTEIRO resolved using rule 12 (expressao -> VAR ATRIBUI VAR .)
  ! reduce/reduce conflict for REAL resolved using rule 12 (expressao -> VAR ATRIBUI VAR .)
  ! reduce/reduce conflict for CARACTERE resolved using rule 12 (expressao -> VAR ATRIBUI VAR .)
  ! reduce/reduce conflict for $end resolved using rule 12 (expressao -> VAR ATRIBUI VAR .)
  ! reduce/reduce conflict for FIM resolved using rule 12 (expressao -> VAR ATRIBUI VAR .)
  ! shift/reduce conflict for SOMA resolved as shift
  ! shift/reduce conflict for SUBTRACAO resolved as shift
  ! shift/reduce conflict for MULTIPLICACAO resolved as shift
  ! shift/reduce conflict for DIVISAO resolved as shift
  ! shift/reduce conflict for RESTO resolved as shift
    VAR             reduce using rule 12 (expressao -> VAR ATRIBUI VAR .)
    ENTRADA         reduce using rule 12 (expressao -> VAR ATRIBUI VAR .)
    SAIDA           reduce using rule 12 (expressao -> VAR ATRIBUI VAR .)
    SE              reduce using rule 12 (expressao -> VAR ATRIBUI VAR .)
    ENQUANTO        reduce using rule 12 (expressao -> VAR ATRIBUI VAR .)
    DURANTE         reduce using rule 12 (expressao -> VAR ATRIBUI VAR .)
    INTEIRO         reduce using rule 12 (expressao -> VAR ATRIBUI VAR .)
    REAL            reduce using rule 12 (expressao -> VAR ATRIBUI VAR .)
    CARACTERE       reduce using rule 12 (expressao -> VAR ATRIBUI VAR .)
    $end            reduce using rule 12 (expressao -> VAR ATRIBUI VAR .)
    FIM             reduce using rule 12 (expressao -> VAR ATRIBUI VAR .)
    SOMA            shift and go to state 37
    SUBTRACAO       shift and go to state 38
    MULTIPLICACAO   shift and go to state 39
    DIVISAO         shift and go to state 40
    RESTO           shift and go to state 41

  ! SOMA            [ reduce using rule 14 (aritmeticos -> .) ]
  ! SUBTRACAO       [ reduce using rule 14 (aritmeticos -> .) ]
  ! MULTIPLICACAO   [ reduce using rule 14 (aritmeticos -> .) ]
  ! DIVISAO         [ reduce using rule 14 (aritmeticos -> .) ]
  ! RESTO           [ reduce using rule 14 (aritmeticos -> .) ]
  ! VAR             [ reduce using rule 14 (aritmeticos -> .) ]
  ! ENTRADA         [ reduce using rule 14 (aritmeticos -> .) ]
  ! SAIDA           [ reduce using rule 14 (aritmeticos -> .) ]
  ! SE              [ reduce using rule 14 (aritmeticos -> .) ]
  ! ENQUANTO        [ reduce using rule 14 (aritmeticos -> .) ]
  ! DURANTE         [ reduce using rule 14 (aritmeticos -> .) ]
  ! INTEIRO         [ reduce using rule 14 (aritmeticos -> .) ]
  ! REAL            [ reduce using rule 14 (aritmeticos -> .) ]
  ! CARACTERE       [ reduce using rule 14 (aritmeticos -> .) ]
  ! $end            [ reduce using rule 14 (aritmeticos -> .) ]
  ! FIM             [ reduce using rule 14 (aritmeticos -> .) ]

    aritmeticos                    shift and go to state 35
    aritmetico                     shift and go to state 36

state 23

    (9) expressao -> VAR ATRIBUI INTEIRODEF .

    VAR             reduce using rule 9 (expressao -> VAR ATRIBUI INTEIRODEF .)
    ENTRADA         reduce using rule 9 (expressao -> VAR ATRIBUI INTEIRODEF .)
    SAIDA           reduce using rule 9 (expressao -> VAR ATRIBUI INTEIRODEF .)
    SE              reduce using rule 9 (expressao -> VAR ATRIBUI INTEIRODEF .)
    ENQUANTO        reduce using rule 9 (expressao -> VAR ATRIBUI INTEIRODEF .)
    DURANTE         reduce using rule 9 (expressao -> VAR ATRIBUI INTEIRODEF .)
    INTEIRO         reduce using rule 9 (expressao -> VAR ATRIBUI INTEIRODEF .)
    REAL            reduce using rule 9 (expressao -> VAR ATRIBUI INTEIRODEF .)
    CARACTERE       reduce using rule 9 (expressao -> VAR ATRIBUI INTEIRODEF .)
    $end            reduce using rule 9 (expressao -> VAR ATRIBUI INTEIRODEF .)
    FIM             reduce using rule 9 (expressao -> VAR ATRIBUI INTEIRODEF .)


state 24

    (10) expressao -> VAR ATRIBUI REALDEF .

    VAR             reduce using rule 10 (expressao -> VAR ATRIBUI REALDEF .)
    ENTRADA         reduce using rule 10 (expressao -> VAR ATRIBUI REALDEF .)
    SAIDA           reduce using rule 10 (expressao -> VAR ATRIBUI REALDEF .)
    SE              reduce using rule 10 (expressao -> VAR ATRIBUI REALDEF .)
    ENQUANTO        reduce using rule 10 (expressao -> VAR ATRIBUI REALDEF .)
    DURANTE         reduce using rule 10 (expressao -> VAR ATRIBUI REALDEF .)
    INTEIRO         reduce using rule 10 (expressao -> VAR ATRIBUI REALDEF .)
    REAL            reduce using rule 10 (expressao -> VAR ATRIBUI REALDEF .)
    CARACTERE       reduce using rule 10 (expressao -> VAR ATRIBUI REALDEF .)
    $end            reduce using rule 10 (expressao -> VAR ATRIBUI REALDEF .)
    FIM             reduce using rule 10 (expressao -> VAR ATRIBUI REALDEF .)


state 25

    (11) expressao -> VAR ATRIBUI CARACTEREDEF .

    VAR             reduce using rule 11 (expressao -> VAR ATRIBUI CARACTEREDEF .)
    ENTRADA         reduce using rule 11 (expressao -> VAR ATRIBUI CARACTEREDEF .)
    SAIDA           reduce using rule 11 (expressao -> VAR ATRIBUI CARACTEREDEF .)
    SE              reduce using rule 11 (expressao -> VAR ATRIBUI CARACTEREDEF .)
    ENQUANTO        reduce using rule 11 (expressao -> VAR ATRIBUI CARACTEREDEF .)
    DURANTE         reduce using rule 11 (expressao -> VAR ATRIBUI CARACTEREDEF .)
    INTEIRO         reduce using rule 11 (expressao -> VAR ATRIBUI CARACTEREDEF .)
    REAL            reduce using rule 11 (expressao -> VAR ATRIBUI CARACTEREDEF .)
    CARACTERE       reduce using rule 11 (expressao -> VAR ATRIBUI CARACTEREDEF .)
    $end            reduce using rule 11 (expressao -> VAR ATRIBUI CARACTEREDEF .)
    FIM             reduce using rule 11 (expressao -> VAR ATRIBUI CARACTEREDEF .)


state 26

    (38) expressao -> ENTRADA ABREPARENTESES VAR . FECHAPARENTESES

    FECHAPARENTESES shift and go to state 42


state 27

    (39) expressao -> SAIDA ABREPARENTESES VAR . FECHAPARENTESES

    FECHAPARENTESES shift and go to state 43


state 28

    (40) expressao -> SE ABREPARENTESES teste . FECHAPARENTESES COMECO expressoes FIM
    (41) expressao -> SE ABREPARENTESES teste . FECHAPARENTESES COMECO expressoes FIM SENAO COMECO expressoes FIM

    FECHAPARENTESES shift and go to state 44


state 29

    (28) teste -> relacao . logicos
    (30) logicos -> .
    (31) logicos -> . logico
    (32) logicos -> . logicos logico
    (33) logico -> . E relacao
    (34) logico -> . E negacao
    (35) logico -> . OU relacao
    (36) logico -> . OU negacao
